# Molekel

./: CMakeLists.txt  README.md
basissets/: 3-21g.basis  6-31++g**.basis  6-31++g*.basis  6-31++g.basis  6-31+g**.basis  6-31+g*.basis  6-31+g.basis  6-311g.basis  6-31g**.basis  6-31g*.basis  6-31g.basis  cc-pvdz.basis  cc-pvtz.basis  sto-3g.basis  sto-4g.basis
cmake/rules/: lapack.cmake
cmake/utils/: setFlags.cmake
docs/: documentation.txt
src/: CMakeLists.txt  atom.f90  geometry.f90  init.f90  molekel.f90  outputParsing.f90  primitiveGF.f90  readbasisset.f90  readinputfile.f90
src/eval/: CMakeLists.txt  RHF.f90  dipolMoment.f90  initEval.f90
src/integrals/: CMakeLists.txt  dipoleIntegrals.f90  electronRepulsionIntegralsJoshuaGoings.f90  integralsMain.f90  kineticEJoshuaGoings.f90  nuclearAttractionIntegralJoshuaGoings.f90  nuclearRepulsion.f90  overlapJoshuaGoings.f90
test/: example.in
utils/: CMakeLists.txt  elements.f90  error.f90  global.f90  kinds.f90  libboys_data.f90  machine.f90  math.f90  parsing.f90
